--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -98,6 +98,7 @@
 										<li class="divider"></li> 
 										<li><a href="{{request.session.local_toggle}}/tech_logout">Tech App</a></li>  
 										<li><a href="{{request.session.local_toggle}}/maint">Maintenance App</a></li>  
+										<li><a href="{{request.session.local_toggle}}/maint_TV">Maintenance TV</a></li>  
 										<li><a href="{{request.session.local_toggle}}/forklift">Forklift App</a></li>  
 										<li><a href="{{request.session.local_toggle}}/barcode_initial_10R">10R80 Barcode Scanner</a></li>  
 										<li><a href="{{request.session.local_toggle}}/barcode_initial">AB1V Barcode Scanner</a></li>  
