--- a/trakberry/templates/maint_TV_BACKUP.html
+++ b/trakberry/templates/maint_TV_BACKUP.html
@@ -8,7 +8,7 @@
 <style type="text/css">
     .mainset{color:black;text-align:center;float:left;width:100%}
     .wrapper_main {background:chartreuse;width:90%;margin-left: 10px;}
-    .frame1 {color:black;text-align:center;float:left;width:25%;margin-bottom: 5px;}
+    .frame1 {color:black;text-align:center;float:left;width:24%;margin-left: 10px;}
     .frame2a{color:black;text-align:center;background:rgb(202, 188, 83);float:left;width:32%;position:relative;left:5px;border-radius: 15px;margin-bottom: 5px;}
     .frame2{color:black;text-align:center;background:rgb(83, 134, 202);float:left;width:32%;position:relative;left:5px;margin-bottom: 5px;}
     .frame3 {color:black;text-align:center;background:rgb(61, 138, 64);float:left;width:32%;position:relative;left:10px;margin-bottom: 5px;}
@@ -27,6 +27,12 @@
 
     .frameA {color:black;text-align:center;float:left;width:95%;margin-bottom: 5px;}
     
+	body {
+    -moz-transform: scale(0.8, 0.8); /* Moz-browsers */
+    zoom: 0.8; /* Other non-webkit browsers */
+    zoom: 80%; /* Webkit browsers */
+}
+
 </style>
 <style>   
 	#prodsum {
@@ -47,8 +53,89 @@
 		text-align: left;
 		background-color: rgb(68, 82, 91);
 		color: white;
-	}
+
+
+
 </style>
+
+<style>
+	* { box-sizing: border-box; }
+$duration: 30s;
+
+@-webkit-keyframes ticker {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    visibility: visible;
+  }
+
+  100% {
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+  }
+}
+
+@keyframes ticker {
+  0% {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    visibility: visible;
+  }
+
+  100% {
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+  }
+}
+
+.ticker-wrap {
+  
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  overflow: hidden;
+  height: 4rem;
+  background-color: rgba(#000, 0.9); 
+  padding-left: 100%;
+  box-sizing: content-box;
+
+  .ticker {
+
+    display: inline-block;
+    height: 4rem;
+    line-height: 4rem;  
+    white-space: nowrap;
+    padding-right: 100%;
+    box-sizing: content-box;
+
+    -webkit-animation-iteration-count: infinite; 
+            animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+            animation-timing-function: linear;
+   -webkit-animation-name: ticker;
+           animation-name: ticker;
+    -webkit-animation-duration: $duration;
+            animation-duration: $duration;
+
+    &__item {
+
+      display: inline-block;
+
+      padding: 0 2rem;
+      font-size: 2rem;
+      color: white;   
+
+    }
+
+  }
+
+}
+
+body { padding-bottom: 5rem; }
+h1,h2,p {padding: 0 5%;}	
+	
+</style>
+
 
   <title>Maint Jobs</title>
   <meta charset="utf-8">
@@ -64,61 +151,207 @@
 
 <meta http-equiv="refresh" content="5; url={{request.session.local_toggle}}/maint_TV"/>
 
-
+<center><br><br><br>
+<font style="font-size: 75px; color:rgb(248, 246, 121); text-shadow: 1px 1px 2px rgb(100, 90, 90), 0 0 25px rgb(0, 0, 0), 0 0 5px rgb(253, 253, 253);">
+	MAINTENANCE
+</font>
+</center>
 
 <div class="wrapper_main">
+
 <div class="frame1">
-
-<div class="container"><br>
-
-{% for i in L %}
+<br><br>
+<table id="prodsum">
+	{% for i in L1 %}
     {% if i.3 == E %}
 	    {% if i.1|slice:"-3:" != wfp %}
 		    {% if i.1|slice:"-7:" != project %}
-			    <div class="row">
-				    <div class="col-sm-8" style="background-color: rgb(252, 244, 136);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="4" border="1">
+			    <tr>
+				    <td style="background-color: rgb(252, 244, 136);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="4" border="1">
 					{{i.0}} : {{ i.1 }}
-				    </div> 
-			    </div>	
-			    <div class="row">
-				    <div class="col-sm-8" style="background-color: rgb(216, 213, 173);border-radius: 25px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="3" border="1"><b>
+					</td> 
+			    </tr>	
+			    <tr>
+				    <td style="background-color: rgb(216, 213, 173);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="3" border="1"><b>
 					<center><a href="{{request.session.local_toggle}}/mcall/get/{{ i.2 }}" style="color: black">{{i.3}}</b></center></a>
-				    </div>
-			    </div>
+					</td>
+			    </tr><tr><td> <br></td></tr>
 		    {% else %}
-			    <div class="row">
-				    <div class="col-sm-8" style="background-color: rgb(255, 184, 98);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="4" border="1">
+			    <tr>
+				    <td style="background-color: rgb(255, 184, 98);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="4" border="1">
 					{{i.0}} : {{ i.1 }}
-				    </div> 
-			    </div>	
-			    <div class="row">
-				    <div class="col-sm-8" style="background-color: rgb(192, 138, 74);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="3" border="1"><b>
+					</td> 
+			    </tr>	
+			    <tr>
+				    <td style="background-color: rgb(192, 138, 74);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="3" border="1"><b>
 					<center><a href="{{request.session.local_toggle}}/mcall/get/{{ i.2 }}" style="color: black">{{i.3}}</b></center></a>
-				    </div>
-			    </div>
+					</td>
+			    </tr><tr><td><br> </td></tr>
 		    {% endif %}	 <!-- end if for Project If Statement -->
 	    {% endif %}	  <!-- end if for wfp If Statement -->
 
     {% else %}
-	    <div class="row">
+	    <tr>
 			{% if i.1|slice:"-3:" != wfp %}
 			    {% if i.3 not in techs %}
-		            <div class="col-sm-8" style="background-color: #999999;border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="4" border="1">{{i.0}} : {{ i.1}}     
-                    </div>
-		            <div class="col-sm-8" style="background-color: #c7c7c7;border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="3" border="1"><b>
+		            <td style="background-color: #999999;border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="4" border="1">{{i.0}} : {{ i.1}}     
+					</td></tr><tr>
+		            <td style="background-color: #c7c7c7;border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="3" border="1"><b>
 		            <center><a href="{{request.session.local_toggle}}/mcall/get/{{ i.2 }}" style="color: black">{{i.3}}</b></center></a>
-		            </div>
+					</td><tr><td><br> </td></tr>
 		        {% endif %}
 		    {% endif %}
-	    </div>
+				</tr>
     {% endif %}
-
-    <br>
 {% endfor %}
-</div>
-
-
+</table>
 </div> <!-- Frame 1 End-->
+
+
+<div class="frame1">
+	<br><br>
+	<table id="prodsum">
+		{% for i in L2 %}
+		{% if i.3 == E %}
+			{% if i.1|slice:"-3:" != wfp %}
+				{% if i.1|slice:"-7:" != project %}
+					<tr>
+						<td style="background-color: rgb(252, 244, 136);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="4" border="1">
+						{{i.0}} : {{ i.1 }}
+						</td> 
+					</tr>	
+					<tr>
+						<td style="background-color: rgb(216, 213, 173);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="3" border="1"><b>
+						<center><a href="{{request.session.local_toggle}}/mcall/get/{{ i.2 }}" style="color: black">{{i.3}}</b></center></a>
+						</td>
+					</tr><tr><td> <br></td></tr>
+				{% else %}
+					<tr>
+						<td style="background-color: rgb(255, 184, 98);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="4" border="1">
+						{{i.0}} : {{ i.1 }}
+						</td> 
+					</tr>	
+					<tr>
+						<td style="background-color: rgb(192, 138, 74);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="3" border="1"><b>
+						<center><a href="{{request.session.local_toggle}}/mcall/get/{{ i.2 }}" style="color: black">{{i.3}}</b></center></a>
+						</td>
+					</tr><tr><td><br> </td></tr>
+				{% endif %}	 <!-- end if for Project If Statement -->
+			{% endif %}	  <!-- end if for wfp If Statement -->
+	
+		{% else %}
+			<tr>
+				{% if i.1|slice:"-3:" != wfp %}
+					{% if i.3 not in techs %}
+						<td style="background-color: #999999;border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="4" border="1">{{i.0}} : {{ i.1}}     
+						</td></tr><tr>
+						<td style="background-color: #c7c7c7;border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="3" border="1"><b>
+						<center><a href="{{request.session.local_toggle}}/mcall/get/{{ i.2 }}" style="color: black">{{i.3}}</b></center></a>
+						</td><tr><td><br> </td></tr>
+					{% endif %}
+				{% endif %}
+					</tr>
+		{% endif %}
+	{% endfor %}
+	</table>
+	</div> <!-- Frame 1 End-->
+
+	<div class="frame1">
+		<br><br>
+		<table id="prodsum">
+			{% for i in L3 %}
+			{% if i.3 == E %}
+				{% if i.1|slice:"-3:" != wfp %}
+					{% if i.1|slice:"-7:" != project %}
+						<tr>
+							<td style="background-color: rgb(252, 244, 136);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="4" border="1">
+							{{i.0}} : {{ i.1 }}
+							</td> 
+						</tr>	
+						<tr>
+							<td style="background-color: rgb(216, 213, 173);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="3" border="1"><b>
+							<center><a href="{{request.session.local_toggle}}/mcall/get/{{ i.2 }}" style="color: black">{{i.3}}</b></center></a>
+							</td>
+						</tr><tr><td> <br></td></tr>
+					{% else %}
+						<tr>
+							<td style="background-color: rgb(255, 184, 98);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="4" border="1">
+							{{i.0}} : {{ i.1 }}
+							</td> 
+						</tr>	
+						<tr>
+							<td style="background-color: rgb(192, 138, 74);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="3" border="1"><b>
+							<center><a href="{{request.session.local_toggle}}/mcall/get/{{ i.2 }}" style="color: black">{{i.3}}</b></center></a>
+							</td>
+						</tr><tr><td><br> </td></tr>
+					{% endif %}	 <!-- end if for Project If Statement -->
+				{% endif %}	  <!-- end if for wfp If Statement -->
+		
+			{% else %}
+				<tr>
+					{% if i.1|slice:"-3:" != wfp %}
+						{% if i.3 not in techs %}
+							<td style="background-color: #999999;border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="4" border="1">{{i.0}} : {{ i.1}}     
+							</td></tr><tr>
+							<td style="background-color: #c7c7c7;border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="3" border="1"><b>
+							<center><a href="{{request.session.local_toggle}}/mcall/get/{{ i.2 }}" style="color: black">{{i.3}}</b></center></a>
+							</td><tr><td><br> </td></tr>
+						{% endif %}
+					{% endif %}
+						</tr>
+			{% endif %}
+		{% endfor %}
+		</table>
+		</div> <!-- Frame 1 End-->
+
+		<div class="frame1">
+			<br><br>
+			<table id="prodsum">
+				{% for i in L4 %}
+				{% if i.3 == E %}
+					{% if i.1|slice:"-3:" != wfp %}
+						{% if i.1|slice:"-7:" != project %}
+							<tr>
+								<td style="background-color: rgb(252, 244, 136);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="4" border="1">
+								{{i.0}} : {{ i.1 }}
+								</td> 
+							</tr>	
+							<tr>
+								<td style="background-color: rgb(216, 213, 173);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="3" border="1"><b>
+								<center><a href="{{request.session.local_toggle}}/mcall/get/{{ i.2 }}" style="color: black">{{i.3}}</b></center></a>
+								</td>
+							</tr><tr><td> <br></td></tr>
+						{% else %}
+							<tr>
+								<td style="background-color: rgb(255, 184, 98);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="4" border="1">
+								{{i.0}} : {{ i.1 }}
+								</td> 
+							</tr>	
+							<tr>
+								<td style="background-color: rgb(192, 138, 74);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="3" border="1"><b>
+								<center><a href="{{request.session.local_toggle}}/mcall/get/{{ i.2 }}" style="color: black">{{i.3}}</b></center></a>
+								</td>
+							</tr><tr><td><br> </td></tr>
+						{% endif %}	 <!-- end if for Project If Statement -->
+					{% endif %}	  <!-- end if for wfp If Statement -->
+			
+				{% else %}
+					<tr>
+						{% if i.1|slice:"-3:" != wfp %}
+							{% if i.3 not in techs %}
+								<td style="background-color: #999999;border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="4" border="1">{{i.0}} : {{ i.1}}     
+								</td></tr><tr>
+								<td style="background-color: #c7c7c7;border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;"><font color="#000000" size ="3" border="1"><b>
+								<center><a href="{{request.session.local_toggle}}/mcall/get/{{ i.2 }}" style="color: black">{{i.3}}</b></center></a>
+								</td><tr><td><br> </td></tr>
+							{% endif %}
+						{% endif %}
+							</tr>
+				{% endif %}
+			{% endfor %}
+			</table>
+			</div> <!-- Frame 1 End-->
+
 </div> <!-- Wrapper End-->
 
 
