--- a/trakberry/templates/maint_TV.html
+++ b/trakberry/templates/maint_TV.html
@@ -2,9 +2,9 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Pure CSS Ticker (Horizontal)</title>
+  <!-- <title>CodePen - Pure CSS Ticker (Horizontal)</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href="./style.css"> -->
 
 <style>
 
@@ -119,6 +119,7 @@ body {
 <body>
 
 <img alt="full screen background image" src="/static/media/back_maint.jpg" id="full-screen-background-image"/>
+<meta http-equiv="refresh" content="45; url={{request.session.local_toggle}}/maint_TV"/>
 
 <center><br><br><br>
 	<font style="font-size: 75px; color:rgb(255, 255, 255); text-shadow: 1px 1px 2px rgb(100, 90, 90), 0 0 25px rgb(0, 0, 0), 0 0 5px rgb(253, 253, 253);">
