Fixed Last Week 10Rprod

--- a/trakberry/templates/maint_TV.html
+++ b/trakberry/templates/maint_TV.html
@@ -96,8 +96,8 @@
   animation-timing-function: linear;
   -webkit-animation-name: ticker;
   animation-name: ticker;
-  -webkit-animation-duration: 140s;
-  animation-duration: 140s;
+  -webkit-animation-duration: 60s;
+  animation-duration: 60s;
 }
 .ticker-wrap2 .ticker__item {
   display: inline-block;
@@ -119,7 +119,7 @@ body {
 <body>
 
 <img alt="full screen background image" src="/static/media/back_maint.jpg" id="full-screen-background-image"/>
-<meta http-equiv="refresh" content="45; url={{request.session.local_toggle}}/maint_TV"/>
+<meta http-equiv="refresh" content="120; url={{request.session.local_toggle}}/maint_TV"/>
 
 <center><br><br><br>
 	<font style="font-size: 75px; color:rgb(255, 255, 255); text-shadow: 1px 1px 2px rgb(100, 90, 90), 0 0 25px rgb(0, 0, 0), 0 0 5px rgb(253, 253, 253);">
@@ -128,8 +128,8 @@ body {
 
 
 	<br><br><br>
-	<font style="font-size: 75px; color:rgb(229, 255, 79); text-shadow: 1px 1px 2px rgb(100, 90, 90), 0 0 25px rgb(0, 0, 0), 0 0 5px rgb(253, 253, 253);">
-		<u>Jobs</u>
+	<font style="font-size: 75px; color:rgb(179, 209, 12); text-shadow: 2px 2px 4px rgb(255, 255, 255), 0 0 25px rgb(0, 0, 0), 0 0 5px rgb(253, 253, 253);">
+		Jobs
 	</font>
 
 
