--- a/trakberry/templates/tech_search_display2.html
+++ b/trakberry/templates/tech_search_display2.html
@@ -13,9 +13,9 @@
 {% for i in machine %}
     <div class="row">
 	   {% if request.session.tech_display = 0 %}
-		<div class="col-sm-12" style="background-color: #ffffff;border-radius: 5px;border-style: solid;border-width: 1px;border-color: #000000;height:37px;"><font color="#000000" size ="2"><b>{{i.2}}:</b>&nbsp;&nbsp;<u><b>{{i.1}}</b> ({{i.8}})</u>:&nbsp;{{ i.4}} <b><i>&nbsp;&nbsp;({{i.7}})</b></i></div>
+		<div class="col-sm-12" style="background-color: #ffffff;border-radius: 5px;border-style: solid;border-width: 1px;border-color: #000000;height:37px;"><font color="#000000" size ="2"><b>{{i.14}}  {{i.2}}:</b>&nbsp;&nbsp;<u><b>{{i.1}}</b> ({{i.8}})</u>:&nbsp;{{ i.4}} <b><i>&nbsp;&nbsp;({{i.7}})</b></i></div>
 		{% else %}
-		<div class="col-sm-12" style="background-color: #ffffff;border-radius: 5px;border-style: solid;border-width: 1px;border-color: #000000;height:37px;"><font color="#000000" size ="2"><b>{{i.2}}:</b>&nbsp;&nbsp;<u><b>{{i.0}}-&nbsp;&nbsp;{{i.1}}</b> ({{i.8}})</u>:&nbsp;{{ i.4}}<b><i>&nbsp;&nbsp;({{i.7}})</b></i></div>
+		<div class="col-sm-12" style="background-color: #ffffff;border-radius: 5px;border-style: solid;border-width: 1px;border-color: #000000;height:37px;"><font color="#000000" size ="2"><b>{{i.14}}  {{i.2}}:</b>&nbsp;&nbsp;<u><b>{{i.0}}-&nbsp;&nbsp;{{i.1}}</b> ({{i.8}})</u>:&nbsp;{{ i.4}}<b><i>&nbsp;&nbsp;({{i.7}})</b></i></div>
 		{% endif %}
 	</div>	
 
