--- a/trakberry/templates/reset_done8.html
+++ b/trakberry/templates/reset_done8.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
 <body>
-    <br><br><br><br>
-    <br><br><br><br>
-    RESET COMPLETE !!!!!
 
-</body></html>
+ <meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/master2" /> 
+
+</body>
+</html>
